# To-Do-List

./: .gitignore  CLAUDE.md  CMakeLists.txt  File1.c  README.md  lotto01.c  main.c  mainwindow.cpp  mainwindow.h
